@@ -98,13 +98,13 @@ public class CrateSettingsPreparerTest {
         builder.put("path.home", ".");
         builder.put("path.conf", PathUtils.get(getClass().getResource("config").toURI()));
         builder.put("stats.enabled", true);
+        builder.put("cluster.name", "crate");
         Environment environment = new Environment(builder.build());
         Settings finalSettings = CrateSettingsPreparer.prepareEnvironment(Settings.EMPTY, environment).settings();
         // Overriding value from crate.yml
         assertThat(finalSettings.getAsBoolean("stats.enabled", null), is(true));
         // Value kept from crate.yml
         assertThat(finalSettings.getAsBoolean("psql.enabled", null), is(false));
-        assertThat(finalSettings.get("cluster.name", null), is("testCluster"));
     }
 
     @Test
@@ -117,6 +117,18 @@ public class CrateSettingsPreparerTest {
         Settings finalSettings = CrateSettingsPreparer.prepareEnvironment(Settings.EMPTY, environment).settings();
         // Overriding value from crate.yml
         assertThat(finalSettings.get("cluster.name", null), is("clusterNameOverridden"));
+    }
+
+    @Test
+    public void testDefaultClusterNameDoesNotOverridesSettingFromConfigFile() throws Exception {
+        Settings.Builder builder = Settings.builder();
+        builder.put("path.home", ".");
+        builder.put("path.conf", PathUtils.get(getClass().getResource("config").toURI()));
+        builder.put("cluster.name", "elasticsearch");
+        Environment environment = new Environment(builder.build());
+        Settings finalSettings = CrateSettingsPreparer.prepareEnvironment(Settings.EMPTY, environment).settings();
+        // Overriding value from crate.yml
+        assertThat(finalSettings.get("cluster.name", null), is("testCluster"));
     }
 
     @Test
@@ -133,6 +145,7 @@ public class CrateSettingsPreparerTest {
     public void testClusterNameMissingFromBothConfigFileAndCommandLineArgs() throws Exception {
         Settings.Builder builder = Settings.builder();
         builder.put("path.home", ".");
+        builder.put("cluster.name", "elasticsearch");
         Environment environment = new Environment(builder.build());
         Settings finalSettings = CrateSettingsPreparer.prepareEnvironment(Settings.EMPTY, environment).settings();
         assertThat(finalSettings.get("cluster.name", null), is("crate"));
